# dawn_of_the_worlds

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.md  run.py
.github/workflow/: test_runner.yaml
.github/workflows/: main.yml
app/storage/: storage.py
app/telegram_bot/: keyboards.py  run_bot.py  utils.py
app/telegram_bot/handlers/: common.py  god_actions.py  god_creation.py  world.py
app/world_creator/: base_model.py  controller.py  image_manager.py  model.py  tiles.py  world_manager.py
app/world_creator/controller/: controller.py
storage/: storage.py
telegram_bot/: README.md  run_bot.py  utils.py
telegram_bot/handlers/: common.py  god_actions.py  god_creation.py  world.py
tests/: conftest.py
tests/world_creator/: test_god_manager.py  test_image_manager.py  test_manager.py  test_utils.py  test_world_manager.py
world_creator/: controller.py  image_manager.py  model.py  tiles.py  utils.py  world_manager.py
